--- a/index.html
+++ b/index.html
@@ -5,32 +5,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/master.css">
   <title>Document</title>
 </head>
 
 <body>
-  <footer>
-    <h1 class="footer-title">Новый гороскоп на 2021 год!</h1>
-    <p class="footer-text">Узнайте, что Вас ждёт.</p>
-  </footer>
+  <header>
+    <p class="header-title">Новый гороскоп на 2021 год!</p>
+    <p class="header-text">Узнайте, что Вас ждёт.</p>
+  </header>
   <div class="container">
     <main>
-      <img class="main-bg" src="img/bg-phone.png" alt="png">
+      <img class="main-bg" src="img/thumb_l_26128 2.svg" alt="png">
       <h3>Узнайте, как 2021 год изменит жизнь каждого из нас!</h3>
       <p class="main-text">К сожалению, 2020 год принес нам немало неприятностей, даже откровенных проблем и несчастий. Не смотря на это, 3 знака зодиака очень скоро обретут долгожданное счастье! 2021 год затронет своими потрясениями каждого из нас.
       </p>
-      <div class="main-question-box">
+      <div class="main-question-first-page">
         <p>Укажите свой пол:</p>
       </div>
-      <div class="main-answear-box">
-        <input type="radio" name="gender" value="female" id="female">
-        <label for="female"> Женщина</label>
-        <input type="radio" name="gender" value="male" id="male">
-        <label for="male"> Мужчина</label>
+      <div class="main-answear-first-page">
+        <label class="main-inline-radio">
+          <input type="radio" class="main-custom-input" name="gender" value="female" id="female">
+          <input type="radio" class="main-custom-input" name="gender" value="male" id="male">
+        </label>
       </div>
       <div class="continue">
-
+        <p>ДАЛЕЕ</p>
       </div>
     </main>
     <footer>
